Thu Jun 10 09:27:56 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/descriptors/run_1_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_1.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_5_to_5.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_receiver.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_sender.pl:
        * connectors/dds4ccm/examples/Hello/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Quoter/descriptors/run_test.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/run_test.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_pub.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_pub3.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_pub_BE.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub2.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub3.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_sub_BE.pl:
        * connectors/dds4ccm/performance-tests/Keyed/descriptors/run_test.pl:
        * connectors/dds4ccm/performance-tests/Throughput/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLDeadline/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLQoS/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/CSLSampleRejected/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/CFTNamesClash/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/Deployments/run_test.pl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/EventListener/descriptors/run_test.pl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/Exception/descriptors/run_test.pl: